--- a/src/pages/Cadastros/Categories.css
+++ b/src/pages/Cadastros/Categories.css
@@ -40,6 +40,7 @@
     height: 7dvh;
     border-radius: .3rem;
     font-family: "poppins";
+    font-weight: 500;
     font-size: .9rem;
     margin-top: -1px;
    
