--- a/src/pages/Cadastros/Sales.module.css
+++ b/src/pages/Cadastros/Sales.module.css
@@ -86,5 +86,14 @@
     font-weight: 500;
     font-size: 1.3rem;
   }
+  .active-tab {
+    background-color: red; /* Altere para a cor desejada */
+  }
+  
 
+  .tabButtons{
+    font-family: poppins, sans-serif;
+    font-weight: 600;
+    font-size: 1rem;
+  }
   
