--- a/src/pages/Cadastros/AddVariationForm.css
+++ b/src/pages/Cadastros/AddVariationForm.css
@@ -25,7 +25,8 @@
     border-radius: 5px;
     font-size: 1rem;
     font-weight: 600;
-    margin-bottom: 3rem;
+    margin-top: 1rem;
+
 }
 
 .AddVariationButton{
