--- a/src/pages/Cadastros/AddVariationForm.css
+++ b/src/pages/Cadastros/AddVariationForm.css
@@ -20,12 +20,14 @@
 .variationSizePriceQuantityButton{
     background-color: #14337c;
     color: white;
-    padding: 1rem;
+    padding: .7rem 3rem;
     border: 0;
     border-radius: 5px;
     font-size: 1rem;
     font-weight: 600;
     margin-top: 1rem;
+ 
+
 
 }
 
@@ -38,17 +40,21 @@
     font-size: 1rem;
     font-weight: 600;
     margin-top: 5rem;
+    margin-bottom: 1rem;
+    
    
 }
 
 .AddVariationButton__Container{
     display: flex;
     justify-content: center;
+ 
 
 }
 
 .h2Container{
     font-size: 2rem;
     color:#14337c ;
+    margin-top: 1rem;
 }
 
