--- a/src/pages/Cadastros/Products.module.css
+++ b/src/pages/Cadastros/Products.module.css
@@ -423,7 +423,7 @@ margin-left: 3rem;
 }
 
 .tableContainer{
-  width: 50vw;
+  width: 80vw;
   
   
 }
@@ -471,4 +471,9 @@ margin-left: 3rem;
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.imageContainer{
+  display: flex;
+  align-items: center;
 }
