--- a/src/pages/Cadastros/Sales.module.css
+++ b/src/pages/Cadastros/Sales.module.css
@@ -9,9 +9,10 @@
     font-family: var(--joy-fontFamily-body, "Inter", var(--joy-fontFamily-fallback, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"));
     font-weight: var(--joy-fontWeight-lg, 600);
     line-height: var(--joy-lineHeight-md, 1.5);
-    padding: .6rem;
+    padding: .7rem;
     border: 0;
     border-radius: var(--Button-radius, var(--joy-radius-sm, 6px));
+    width: 18vw;
 }
 
 
