refactor: refatorando layout do painel administrativo.

--- a/src/pages/Cadastros/Categories.css
+++ b/src/pages/Cadastros/Categories.css
@@ -1,4 +1,9 @@
 /* styles.css */
+.CategoriesContainer{
+  display: flex;
+  flex-direction: column;
+  margin-top: 8rem;
+}
 .category-table {
     width: 100%;
     border-collapse: collapse;
